--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,9 +8,9 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_DB: ${{ secrets.DB_D }}
-          POSTGRES_USER: ${{ secrets.DB_U }}
-          POSTGRES_PASSWORD: ${{ secrets.KUNLE_BABA }}
+          POSTGRES_DB: db
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -20,9 +20,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: joshuaavalon/flyway-action@v3.0.0
         with:
-          url: ${{ secrets.DB_URI }}
-          user: ${{ secrets.DB_U }}
-          password: ${{ secrets.KUNLE_BABA }}
+          url: jdbc:postgresql://postgres:5432/db
+          user: user
+          password: password
           locations: filesystem:./sql
       - run: echo 'testing'
 
